[package]
name = "grpc-uds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.9.2"
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }

[build-dependencies]
tonic-build = "0.9.2"
